Improve ES search expression query generation. Closes #2749